2007-07-28	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	use -fPIC as compiler flag per default

	* lib/Makefile.am:
	added -soname-flag to linker flags for not having shared library
	without SONAME-entry

	* ica/Makefile.am:
	* ima/Makefile.am:
	* setup/Makefile.am:
	* lib/Makefile.am:
	use $(RCC)-variable instead of rcc - fixes some compilation errors on
	several platforms/distributions

	* acinclude.m4:
	- added some more Qt4-search-paths and removed deprecated ones
	- cleaned up a lot all the Qt4-detection code and made ready for
	  64 bit platforms
	- also check for Qt's rcc-utility
	- fixed typos in lrelease and lupdate-detection

2007-07-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ica_main.cpp:
	include version-info in tooltip of system-tray-icon

	* lib/include/system_key_trapper.h:
	* lib/src/system_key_trapper.cpp:
	* lib/src/lock_widget.cpp:
	win32: disable *all* keys while screen is being locked

2007-07-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* Makefile.svn:
	removed LUPUS-references

	* utils-win32/userinfo.cpp:
	more error-handling

	* lib/src/dsa_key.cpp:
	applied patch from Diego J. Brengi <brengi/at/inti/dot/gov/dot/ar> for
	also accepting keys that were generated using ssh-keygen

2007-06-09	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.ts:
	* ima/resources/it.qm:
	* lib/resources/it.ts:
	* lib/resources/it.qm:
	updated Italian localization and removed obsolete
	translations

2007-06-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.3 release

	* lib/Makefile.am:
	fixed missing SOURCE-entry for italc_core.dll

	* ica/win32/src/Log.h:
	* ica/win32/src/Log.cpp:
	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	made log-level of WinVNC being equal to iTALC log-level

	* ica/src/isd_server.cpp:
	use QProcess::startDetached() instead of QProcess::start() for
	launching commands
